src/static/pycontw-2020/styles/pages/_events.scss
@import 'pycontw-2020/styles/palette.scss';

@mixin icon($name, $margin-top: 0, $x: left, $width: $icon-width) {
	width: $width;
	height: $width;
	margin-top: $margin-top; // Visual compensation.
	background: url('../../assets/icon-#{$name}.svg') top $x no-repeat;
}

$icon-width: 26px;
$icon-height: 26px;

main {
	max-width: unset;
	margin: unset;
	padding: 24px;

	.py-schedule {
		&-tabs {
			display: flex;
			justify-content: center;
			align-items: center;

			&__tab {
				margin: 0 24px 24px;
				padding: 24px 72px;
				font-family: $header-font-family;
				font-size: 20px;
				border-radius: 8px;
				cursor: default;

				&:hover:not(.--active) {
					color: red;
					cursor: pointer;
				}

				&.--active {
					color: $jinger-bread;
					background: $salmon;
				}
			}
		}

		&-timetable {
			&-header {
				position: sticky;
				top: 0;
				z-index: 1000;
				display: flex;
				background: transparentize($brick, 0.3);

				&-column {
					display: flex;
					margin: 8px 8px 8px 0;
					padding: 12px 0;
					justify-content: center;
					font-family: $text-font-family;
					font-size: 18px;
					color: #ffffff;
					background: $brown;
					border-radius: 5px;

					&:last-child {
						margin-right: 0;
					}

					&.--timeline {
						flex: 1;
						background: transparent;
					}

					&.--room {
						flex: 2;
					}
				}

				&:not(.--active) {
					display: none;
				}
			}

			&-body {
				display: grid;
				grid-template-columns:
						[times] 1fr
						[room-4-r0-start] 2fr
					  [room-4-r0-end room-5-r1-start] 2fr
						[room-5-r1-end room-6-r2-start] 2fr
					  [room-6-r2-end room-8-r3-start] 2fr
					  [room-8-r3-end room-7-r4-start] 2fr
					  [room-7-r4-end];
				grid-column-gap: 8px;
				grid-row-gap: 8px;

				&-item {
					display: flex;
					font-family: $text-font-family;
					border-radius: 5px;

					.context-container {
						position: sticky;
						top: 70px;
						padding: 12px;

						.context {
							.title {
								margin-bottom: 8px;
								font-size: 18px;
								font-weight: 700;
							}

							.speaker {
								margin-bottom: 8px;

								.name {
									margin-bottom: 8px;
									font-weight: 600;
									font-size: 14px;
									text-decoration: underline;
								}
							}
						}
					}

					& > .custom-event {
						display: flex;
						width: 100%;
						height: 100%;
						flex-direction: column;
						color: $dark-gray;
						text-align: center;
						background: rgba($dark-gray, 0.1);
						border-radius: 5px;
						cursor: default;

						.context {
							display: flex;
							justify-content: center;

							:not(.title) {
								flex: 1;
							}

							.title {
								flex: 3
							}
						}
					}

					& > .keynote-event {
						display: flex;
						width: 100%;
						height: 100%;
						flex-direction: column;
						text-align: center;
						background: $salmon-dark;
						border-radius: inherit;
					}

					& > .talk-event {
						display: flex;
						flex-direction: column;
						width: 100%;
						height: 100%;
						background: rgba($salmon-dark, 0.5);
						border-radius: inherit;

						.title {
							display: -webkit-box;
							height: 88px;
							overflow: hidden;
							text-overflow: ellipsis;
							box-sizing: border-box;
							-webkit-line-clamp: 3;
						}

						.tags {
							display: flex;
						}

						.info {
							display: flex;
							justify-content: space-between;
							align-items: center;
						}
					}

					.language-enen {
						@include icon('language-enen', 0, center, 2 * $icon-width);
					}

					.language-zhen {
						@include icon('language-zhen', 0, center, 2 * $icon-width);
					}

					.language-zhzh {
						@include icon('language-zhzh', 0, center, 2 * $icon-width);
					}

					.python-level-novice {
						@include icon('level-1', 2px);
					}

					.python-level-intermediate {
						@include icon('level-2', 2px);
					}

					.python-level-experienced {
						@include icon('level-3', 2px);
					}

					.no-recording {
						@include icon('no-recording', 1px);
					}

					.room-R0 {
						@include icon('room-R0', 1px, center);
					}

					.room-R1 {
						@include icon('room-R1', 1px, center);
					}

					.room-R2 {
						@include icon('room-R2', 1px, center);
					}

					.room-R3 {
						@include icon('room-R3', 1px, center);
					}
				}

				.room-3-r012 {
					grid-column: room-4-r0-start / room-6-r2-end;
				}

				.room-4-r0 {
					grid-column: room-4-r0-start / room-4-r0-end;
				}

				.room-5-r1 {
					grid-column: room-5-r1-start / room-5-r1-end;
				}

				.room-6-r2 {
					grid-column: room-6-r2-start / room-6-r2-end;
				}

				.room-7-r4 {
					grid-column: room-7-r4-start / room-7-r4-end;
				}

				.room-1-r3 {
					grid-column: room-8-r3-start / room-8-r3-end;
				}

				.room-2-all {
					grid-column: room-4-r0-start / room-8-r3-end;
				}

				.timeline {
					grid-column: times;
					justify-self: center;
					font-family: $header-font-family;
					font-size: 18px;
					color: $jinger-bread;

					&.--hour {
						font-size: 20px;
						font-weight: 500;
					}

					&.--half-an-hour {
						font-size: 18px;
					}
				}

				&:not(.--active) {
					display: none;
				}
			}
		}
	}
}

